[package]
name = "bridgekeeper"
version = "0.1.0"
edition = "2021"

[lib]
name = "bridgekeeper_api"
path = "src/api.rs"

[[bin]]
name = "bridgekeeper"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.9.0"
pretty_env_logger = "0.4"
mongodb = "2.0.0"
uuid = { version="0.8.2", features = ["v4"] }

rocket = { version="0.5.0-rc.1", features = ["json", "msgpack", "uuid"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}

jsonwebtoken = "7.2.0"
rust-argon2 = "0.8"
rand = "0.8.0"
chrono = "0.4"

base64 = "0.13.0"
totp-lite = "1.0.3"

fake = "2.2"
regex = "1.5.4"
