[package]
name = "bridgekeeper"
version = "0.5.0"
edition = "2021"

[lib]
name = "bridgekeeper_api"
path = "src/api.rs"

[[bin]]
name = "bridgekeeper"
path = "src/main.rs"

[dependencies]
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version="0.3.10", features = ["env-filter"] }
env_logger = "0.9.0"
pretty_env_logger = "0.4"
mongodb = "2.1"
futures = { version="0.3.19"}
uuid = { version="0.8.2", features = ["v4"] }

tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
hyper = { version = "0.14" }
axum = { version = "0.5" }
tower = { version = "0.4" }
tower-http = { version = "0.2", features = [ "trace", "sensitive-headers" ] }
mime = { version = "0.3" }

jsonwebtoken = "7.2"
rust-argon2 = "0.8"
rand = "0.8"
chrono = "0.4"

base64 = "0.13.0"
totp-lite = "1.0.3"

fake = "2.4"
regex = "1.5"
