[package]
name = "bridgekeeper"
version = "0.6.2"
edition = "2021"

[lib]
name = "bridgekeeper_api"
path = "src/api.rs"

[[bin]]
name = "bridgekeeper"
path = "src/main.rs"

[dependencies]
log = "^0.4.0"
tracing = "0.1"
tracing-subscriber = { version="0.3.10", features = ["env-filter"] }
env_logger = "^0.9.0"
pretty_env_logger = "0.4"
mongodb = "^2.2.0"
futures = { version="^0.3.19"}
uuid = { version="^1.1.0", features = ["v4"] }

tokio = { version = "^1.19.0", features = ["full"] }
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = { version = "^1.0.0"}
hyper = { version = "^0.14.0" }
axum = { version = "^0.5.0" }
tower = { version = "^0.4.0" }
tower-http = { version = "^0.3.0", features = [ "trace", "sensitive-headers", "cors" ] }
mime = { version = "^0.3.0" }

jsonwebtoken = "^8.1.0"
rust-argon2 = "^1.0.0"
rand = "^0.8.0"

base64 = "^0.13.0"
totp-lite = "^2.0.0"

fake = "2.4"
regex = "1.5"

data-encoding = "2.3"